# gcrostore

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.devcontainer/: .gitignore  compose.yml  devcontainer.json  requirements.txt
.github/: release-drafter.yml
.github/workflows/: build-and-push.yml  docker-build.yml  test.yml
scripts/: get-creds.py  test.sh
src/gcrostore/: __init__.py  cancel.py  config.py  mail.py  models.py  status.py
src/gcrostore/_to_crostore/: __init__.py  datasystem.py  mailsystem.py
src/gcrostore/messages/: base.md.j2  cancellation_failure.md.j2  cancellation_success.md.j2  relogin_request.md.j2
tests/: test_cancel.py  test_mail.py  test_models.py
