[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcrostore"
description = "Crostore web app integrated with Google system"
readme = "README.md"
requires-python = "~=3.10"
license = "MIT"
authors = [
  { name = "Shuhei Nitta", email = "huisintheta@gmail.com" }
]
keywords = []
classifiers = []
dependencies = [
  "crostore @ git+https://github.com/huisint/crostore@v0.0.2",
  "selenium~=4.14.0",
  "google-api-python-client~=2.105.0",
  "fastapi~=0.104.1",
  "pydantic[email]~=2.4.2",
  "jinja2~=3.1.2",
  "markdown~=3.4.3",
]
dynamic = ["version"]

[project.urls]
Documentation = ""
Homepage = "https://github.com/huisint/gcrostore"

[project.optional-dependencies]
test = [
  "pytest==7.4.2",
  "pytest-cov==4.1.0",
  "pytest-describe==2.1.0",
  "pytest-mock==3.11.1",
  "mypy==1.6.1",
  "flake8==6.1.0",
  "isort==5.12.0",
  "black==23.10.1",
]
stub = [
  "google-api-python-client-stubs==1.18.0",
  "types-Markdown==3.5.0.0",
]
doc = []

[tool.hatch.version]
path = "src/gcrostore/__init__.py"

[tool.hatch.envs.test]
features = ["test", "stub"]

[tool.hatch.envs.test.scripts]
test = "scripts/test.sh {args}"
format = "scripts/format.sh {args}"
lint = "scripts/lint.sh {args}"

[tool.hatch.envs.doc]
features = ["doc"]

[tool.hatch.envs.doc.scripts]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
strict = true
sqlite_cache = true

[[tool.mypy.overrides]]
module = [
  "google.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=gcrostore"
