[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcrostore"
description = "Crostore web app integrated with Google system"
readme = "README.md"
requires-python = "~=3.10"
license = "MIT"
authors = [
  { name = "Shuhei Nitta", email = "huisintheta@gmail.com" }
]
keywords = []
classifiers = []
dependencies = [
  "crostore @ git+https://github.com/huisint/crostore@v0.0.2",
  "google-api-python-client~=2.108.0",
  "fastapi~=0.104.1",
  "pydantic[email]~=2.5.0",
  "jinja2~=3.1.2",
  "markdown~=3.5.1",
]
dynamic = ["version"]

[project.urls]
Documentation = ""
Homepage = "https://github.com/huisint/gcrostore"

[project.optional-dependencies]
uvicorn = [
  "uvicorn==0.24.0",
]

[tool.hatch.version]
path = "src/gcrostore/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest==7.4.3",
  "pytest-cov==4.1.0",
  "pytest-describe==2.1.0",
  "pytest-mock==3.12.0",
  "mypy==1.7.0",
  "google-api-python-client-stubs==1.18.0",
  "types-Markdown==3.5.0.1",
]
features = ["uvicorn"]

[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing:skip-covered src tests {args}"
# test-doc = "pytest --doctest-modules src"
check-type = "mypy src tests {args}"
serve = "uvicorn gcrostore:app --reload --reload-dir=src {args}"

[tool.hatch.envs.lint]
skip-install = true
dependencies = [
  "flake8==6.1.0",
  "isort==5.12.0",
  "black==23.11.0",
]

[tool.hatch.envs.lint.scripts]
format = [
  "isort src tests scripts",
  "black src tests scripts",
]
lint = [
  "isort --check-only src tests",
  "black --check src tests",
  "flake8 src tests",
]

[tool.hatch.envs.doc]
dependencies = []

[tool.hatch.envs.doc.scripts]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
strict = true
sqlite_cache = true

[[tool.mypy.overrides]]
module = [
  "google.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=gcrostore"
