[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcrostore"
description = "Crostore web app integrated with Google system"
readme = "README.md"
requires-python = "~=3.10"
license = "MIT"
authors = [
  { name = "Shuhei Nitta", email = "huisintheta@gmail.com" }
]
maintainers = [
  { name = "Shuhei Nitta", email = "huisintheta@gmail.com" }
]
keywords = []
classifiers = []
dependencies = [
  "crostore[google] @ git+https://github.com/huisint/crostore@v0.1.1",
  "fastapi==0.111.0",
  "pydantic[email]==2.6.4",
  "jinja2==3.1.3",
  "markdown==3.6",
  "types-Markdown==3.6.0.20240316",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/huisint/gcrostore"
Homepage = "https://github.com/huisint/gcrostore"
Repository = "https://github.com/huisint/gcrostore"

[project.optional-dependencies]
test = [
  "mypy==1.9.0",
  "pytest==8.1.1",
  "pytest-cov==5.0.0",
  "pytest-describe==2.2.0",
  "pytest-mock==3.14.0",
]
uvicorn = [
  "uvicorn[standard]==0.29.0",
]

[tool.hatch.version]
path = "src/gcrostore/__init__.py"

[tool.hatch.envs.default]
features = ["test", "uvicorn"]

[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing:skip-covered src tests {args}"
# test-doc = "pytest --doctest-modules src"
check-type = "mypy src tests {args}"
serve = "uvicorn gcrostore:app --reload --reload-dir=src {args}"

[tool.hatch.envs.doc]
dependencies = []

[tool.hatch.envs.doc.scripts]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
strict = true
sqlite_cache = true

[[tool.mypy.overrides]]
module = [
  "google.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=gcrostore"

[tool.ruff]
lint.select = [
  "E",
  "F",
  "W",
  "I",
]
